vlib/v/checker/tests/import_symbol_type_private_err.vv
import io { ReaderWriterImpl }
fn main() {
  _ := ReaderWriterImpl{}
}
